--- a/p1ersfe/fm_stareimb.html
+++ b/p1ersfe/fm_stareimb.html
@@ -27,7 +27,7 @@
             <input type="radio" id="st_den" name="re_st" value="DENIED">
             <label for="st_den">DENIED</label>
             <br /> -->
-        <div class="row">
+        <div id="formReq" class="row">
             <h4>Reimbursement type</h4>
             <input id="txtre_stat" placeholder="reimb_stat" size="20" class="col-sm-2" value="PENDING"/>
             <!--<button id="restButton" class="btn btn-primary col-sm-2">find</button>-->
@@ -57,6 +57,8 @@
         <br />
         <br />
         <button id="getstaReimbButton" class="btn btn-primary">Find Reimbursements</button>
+        <p>  </p>
+        <button id="setudpReimbButton" class="btn btn-primary">Update PENDING Reimbursements</button>
         <p>  </p>
         <input type="button" value="Go back" class="btn btn-primary" onclick="history.back()">
     </div>
