added html and js to create user

--- a/p1ersfe/fm_headder.html
+++ b/p1ersfe/fm_headder.html
@@ -89,6 +89,7 @@
           <a href="fm_stareimb.html" target="fm_work">Reimbursement by Status</a>
           <a href="us_usridreimb.html" target="fm_work">Single Reimbursement</a>
           <a href="us_reqreimb.html" target="fm_work">Request Reimbursement</a>
+          <a href="fm_addnewuser.html" target="fm_work">Create User</a>
 
           </div>
         </div> 
