--- a/p1ersfe/fm_stareimb.html
+++ b/p1ersfe/fm_stareimb.html
@@ -58,7 +58,7 @@
         <br />
         <button id="getstaReimbButton" class="btn btn-primary">Find Reimbursements</button>
         <p>  </p>
-        <button id="setudpReimbButton" class="btn btn-primary">Update PENDING Reimbursements</button>
+        <button id="setudpReimbButton" class="btn btn-primary">Approve PENDING Reimbursements</button>
         <p>  </p>
         <input type="button" value="Go back" class="btn btn-primary" onclick="history.back()">
     </div>
