fixed menu issues

--- a/p1ersfe/us_header.html
+++ b/p1ersfe/us_header.html
@@ -84,8 +84,8 @@
           <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-          <a href="us_usridreimb.html" target="us_work">Single Reimbursement</a>
-          <a href="us_reqreimb.html" target="us_work">Request Reimbursement</a>
+          <a href="us_usridreimb.html">Single Reimbursement</a>
+          <a href="us_reqreimb.html">Request Reimbursement</a>
 
           </div>
         </div> 
